--- a/apps/analog-app-e2e-playwright/project.json
+++ b/apps/analog-app-e2e-playwright/project.json
@@ -3,18 +3,18 @@
   "sourceRoot": "apps/analog-app-e2e-playwright/src",
   "projectType": "application",
   "targets": {
+    "vitest": {
+      "executor": "nx:run-commands",
+      "options": {
+        "cwd": "apps/analog-app-e2e-playwright",
+        "commands": ["vitest"]
+      }
+    },
     "e2e": {
       "executor": "nx:run-commands",
       "options": {
-        "cwd": "apps/analog-app-e2e-playwright",
-        "commands": ["playwright test"]
-      }
-    },
-    "show-report": {
-      "executor": "nx:run-commands",
-      "options": {
-        "cwd": "apps/analog-app-e2e-playwright",
-        "commands": ["playwright show-report"]
+        "cwd": "",
+        "command": "start-server-and-test 'nx serve analog-app' 3000 'nx run analog-app-e2e-playwright:vitest'"
       }
     },
     "lint": {
