--- a/packages/create-analog/template-angular-v14/package.json
+++ b/packages/create-analog/template-angular-v14/package.json
@@ -1,6 +1,10 @@
 {
   "name": "my-app",
   "version": "0.0.0",
+  "private": true,
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "scripts": {
     "dev": "vite",
     "ng": "ng",
@@ -10,7 +14,6 @@
     "test": "vitest",
     "postinstall": "vite optimize"
   },
-  "private": true,
   "dependencies": {
     "@angular/animations": "^14.0.0",
     "@angular/common": "^14.0.0",
@@ -20,9 +23,9 @@
     "@angular/platform-browser": "^14.0.0",
     "@angular/platform-browser-dynamic": "^14.0.0",
     "@angular/router": "^14.0.0",
-    "rxjs": "~7.5.0",
-    "tslib": "^2.3.0",
-    "zone.js": "~0.11.4"
+    "rxjs": "~7.5.6",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
     "@analogjs/vite-plugin-angular": "latest",
@@ -30,8 +33,8 @@
     "@angular/cli": "~14.0.3",
     "@angular/compiler-cli": "^14.0.0",
     "jsdom": "^20.0.0",
-    "typescript": "~4.7.2",
-    "vite": "^2.9.13",
-    "vitest": "^0.17.0"
+    "typescript": "~4.7.4",
+    "vite": "^3.0.9",
+    "vitest": "^0.22.1"
   }
 }
