test: add playwright tests (#51)
Closes #20

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prepare": "git config core.hookspath .githooks",
     "start": "nx serve",
     "build": "nx run-many --target build --all",
-    "e2e": "nx run-many --target e2e --all",
+    "e2e": "nx run-many --target e2e --all --parallel=1",
     "test": "nx run-many --target test --all",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "contributors:add": "all-contributors add",
@@ -63,6 +63,7 @@
     "@nrwl/linter": "14.4.2",
     "@nrwl/workspace": "14.4.2",
     "@nx-plus/docusaurus": "14.1.0",
+    "playwright": "^1.25.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
     "@typescript-eslint/parser": "^5.29.0",
