--- a/packages/astro-integration-angular/package.json
+++ b/packages/astro-integration-angular/package.json
@@ -32,7 +32,7 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "dependencies": {
-    "@analogjs/vite-plugin-angular": "^0.2.0-alpha.0"
+    "@analogjs/vite-plugin-angular": "latest"
   },
   "peerDependencies": {
     "@angular-devkit/build-angular": "^14.0.0"
