feat(astro-integration-angular): move astro integration to analog monorepo (#28)
Closes #24

--- a/package.json
+++ b/package.json
@@ -40,8 +40,10 @@
     "@angular/forms": "~14.0.0",
     "@angular/platform-browser": "~14.0.0",
     "@angular/platform-browser-dynamic": "~14.0.0",
+    "@angular/platform-server": "^14.1.3",
     "@angular/router": "~14.0.0",
     "@nrwl/angular": "14.4.2",
+    "astro": "^1.0.6",
     "rxjs": "~7.4.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
@@ -56,13 +58,16 @@
     "@angular/language-service": "~14.0.0",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
+    "@astrojs/markdown-component": "^1.0.1",
     "@ngtools/webpack": "~14.0.0",
     "@nrwl/cli": "14.4.2",
     "@nrwl/cypress": "14.4.2",
     "@nrwl/eslint-plugin-nx": "14.4.2",
+    "@nrwl/jest": "14.4.2",
     "@nrwl/linter": "14.4.2",
     "@nrwl/workspace": "14.4.2",
     "@nx-plus/docusaurus": "14.1.0",
+    "@types/jest": "27.4.1",
     "playwright": "^1.25.0",
     "@types/node": "16.11.7",
     "@typescript-eslint/eslint-plugin": "^5.29.0",
@@ -75,6 +80,7 @@
     "eslint": "~8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
+    "jest": "27.5.1",
     "kolorist": "^1.5.1",
     "lint-staged": "^13.0.3",
     "minimist": "^1.2.6",
@@ -83,8 +89,9 @@
     "prompts": "^2.4.2",
     "rollup-plugin-visualizer": "^5.7.1",
     "start-server-and-test": "^1.14.0",
+    "ts-jest": "27.1.4",
     "ts-node": "~10.8.0",
-    "typescript": "~4.7.4",
+    "typescript": "~4.7.2",
     "vite": "^3.0.4",
     "vitest": "^0.21.0",
     "webpack-bundle-analyzer": "^4.5.0"
