--- a/packages/astro-integration-angular/project.json
+++ b/packages/astro-integration-angular/project.json
@@ -5,16 +5,13 @@
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
-      "outputs": [
-        "{options.outputPath}"
-      ],
+      "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/astro-integration-angular",
         "main": "packages/astro-integration-angular/src/index.ts",
         "tsConfig": "packages/astro-integration-angular/tsconfig.lib.json",
-        "assets": [
-          "packages/astro-integration-angular/*.md"
-        ]
+        "assets": ["packages/astro-integration-angular/*.md"],
+        "updateBuildableProjectDepsInPackageJson": false
       }
     },
     "publish": {
@@ -31,20 +28,14 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": [
-        "{options.outputFile}"
-      ],
+      "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": [
-          "packages/astro-integration-angular/**/*.ts"
-        ]
+        "lintFilePatterns": ["packages/astro-integration-angular/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/packages/astro-integration-angular"
-      ],
+      "outputs": ["coverage/packages/astro-integration-angular"],
       "options": {
         "jestConfig": "packages/astro-integration-angular/jest.config.json",
         "passWithNoTests": true
