--- a/packages/astro-angular/project.json
+++ b/packages/astro-angular/project.json
@@ -1,23 +1,23 @@
 {
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "packages/astro-integration-angular/src",
+  "sourceRoot": "packages/astro-angular/src",
   "projectType": "library",
   "targets": {
     "build": {
       "executor": "@nrwl/js:tsc",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "outputPath": "dist/packages/astro-integration-angular",
-        "main": "packages/astro-integration-angular/src/index.ts",
-        "tsConfig": "packages/astro-integration-angular/tsconfig.lib.json",
-        "assets": ["packages/astro-integration-angular/*.md"],
+        "outputPath": "dist/packages/astro-angular",
+        "main": "packages/astro-angular/src/index.ts",
+        "tsConfig": "packages/astro-angular/tsconfig.lib.json",
+        "assets": ["packages/astro-angular/*.md"],
         "updateBuildableProjectDepsInPackageJson": false
       }
     },
     "publish": {
       "executor": "@nrwl/workspace:run-commands",
       "options": {
-        "command": "node tools/scripts/publish.mjs astro-integration-angular {args.ver} {args.tag}"
+        "command": "node tools/scripts/publish.mjs astro-angular {args.ver} {args.tag}"
       },
       "dependsOn": [
         {
@@ -30,14 +30,14 @@
       "executor": "@nrwl/linter:eslint",
       "outputs": ["{options.outputFile}"],
       "options": {
-        "lintFilePatterns": ["packages/astro-integration-angular/**/*.ts"]
+        "lintFilePatterns": ["packages/astro-angular/**/*.ts"]
       }
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/packages/astro-integration-angular"],
+      "outputs": ["coverage/packages/astro-angular"],
       "options": {
-        "jestConfig": "packages/astro-integration-angular/jest.config.json",
+        "jestConfig": "packages/astro-angular/jest.config.json",
         "passWithNoTests": true
       }
     }
