feat(astro-angular): update Astro integration with Angular v14.2 APIs (#58)
Relates to #24

--- a/package.json
+++ b/package.json
@@ -33,39 +33,39 @@
     "apps/docs-app"
   ],
   "dependencies": {
-    "@angular/animations": "~14.0.0",
-    "@angular/common": "~14.0.0",
-    "@angular/compiler": "~14.0.0",
-    "@angular/core": "~14.0.0",
-    "@angular/forms": "~14.0.0",
-    "@angular/platform-browser": "~14.0.0",
-    "@angular/platform-browser-dynamic": "~14.0.0",
-    "@angular/platform-server": "^14.1.3",
-    "@angular/router": "~14.0.0",
-    "@nrwl/angular": "14.4.2",
-    "astro": "^1.0.6",
-    "rxjs": "~7.4.0",
+    "@angular/animations": "14.2.0",
+    "@angular/common": "14.2.0",
+    "@angular/compiler": "14.2.0",
+    "@angular/core": "14.2.0",
+    "@angular/forms": "14.2.0",
+    "@angular/platform-browser": "14.2.0",
+    "@angular/platform-browser-dynamic": "14.2.0",
+    "@angular/platform-server": "14.2.0",
+    "@angular/router": "14.2.0",
+    "@nrwl/angular": "14.5.10",
+    "astro": "^1.1.0",
+    "rxjs": "7.5.6",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~14.0.0",
+    "@angular-devkit/build-angular": "14.2.1",
     "@angular-eslint/eslint-plugin": "~14.0.0",
     "@angular-eslint/eslint-plugin-template": "~14.0.0",
     "@angular-eslint/template-parser": "~14.0.0",
-    "@angular/cli": "~14.0.0",
-    "@angular/compiler-cli": "~14.0.0",
-    "@angular/language-service": "~14.0.0",
+    "@angular/cli": "~14.2.1",
+    "@angular/compiler-cli": "14.2.0",
+    "@angular/language-service": "14.2.0",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-conventional": "^17.0.3",
     "@astrojs/markdown-component": "^1.0.1",
     "@ngtools/webpack": "~14.0.0",
-    "@nrwl/cli": "14.4.2",
-    "@nrwl/cypress": "14.4.2",
-    "@nrwl/eslint-plugin-nx": "14.4.2",
-    "@nrwl/jest": "14.4.2",
-    "@nrwl/linter": "14.4.2",
-    "@nrwl/workspace": "14.4.2",
+    "@nrwl/cli": "14.5.10",
+    "@nrwl/cypress": "14.5.10",
+    "@nrwl/eslint-plugin-nx": "14.5.10",
+    "@nrwl/jest": "14.5.10",
+    "@nrwl/linter": "14.5.10",
+    "@nrwl/workspace": "14.5.10",
     "@nx-plus/docusaurus": "14.1.0",
     "@types/jest": "27.4.1",
     "playwright": "^1.25.0",
@@ -84,13 +84,13 @@
     "kolorist": "^1.5.1",
     "lint-staged": "^13.0.3",
     "minimist": "^1.2.6",
-    "nx": "14.4.2",
+    "nx": "14.5.10",
     "prettier": "^2.6.2",
     "prompts": "^2.4.2",
     "rollup-plugin-visualizer": "^5.7.1",
     "start-server-and-test": "^1.14.0",
     "ts-jest": "27.1.4",
-    "ts-node": "~10.8.0",
+    "ts-node": "10.9.1",
     "typescript": "~4.7.2",
     "vite": "^3.0.4",
     "vitest": "^0.21.0",
