--- a/packages/astro-angular/package.json
+++ b/packages/astro-angular/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@analogjs/astro-integration-angular",
-  "version": "0.0.1",
+  "name": "@analogjs/astro-angular",
+  "version": "0.1.0-beta.0",
   "description": "An Angular integration for Astro",
   "type": "module",
   "author": "Brandon Roberts <robertsbt@gmail.com>",
@@ -10,11 +10,6 @@
     "./server.js": "./src/server.js",
     "./package.json": "./package.json"
   },
-  "files": [
-    "index.js",
-    "client.js",
-    "server.js"
-  ],
   "keywords": [
     "angular",
     "astro",
@@ -26,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/analogjs/analog/issues"
   },
-  "homepage": "https://github.com/analogjs/analog#readme",
+  "homepage": "https://analogjs.org",
   "repository": {
     "type": "git",
     "url": "https://github.com/analogjs/analog.git"
@@ -35,6 +30,19 @@
     "@analogjs/vite-plugin-angular": "latest"
   },
   "peerDependencies": {
-    "@angular-devkit/build-angular": "^14.0.0"
+    "@angular-devkit/build-angular": "^14.0.0",
+    "@angular/animations": "^14.0.0",
+    "@angular/common": "^14.0.0",
+    "@angular/compiler-cli": "^14.0.0",
+    "@angular/compiler": "^14.0.0",
+    "@angular/core": "^14.0.0",
+    "@angular/language-service": "^14.0.0",
+    "@angular/forms": "^14.0.0",
+    "@angular/platform-browser": "^14.0.0",
+    "@angular/platform-browser-dynamic": "^14.0.0",
+    "@angular/platform-server": "^14.0.0",
+    "rxjs": "^7.5.0",
+    "zone.js": "~0.11.4",
+    "tslib": "^2.0.0"
   }
 }
