chore: add astro-angular to issue templates

--- a/.github/ISSUE_TEMPLATE/01-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yml
@@ -25,6 +25,7 @@ body:
       options:
         - create-analog
         - vite-plugin-angular
+        - astro-angular
         - Docs
         - Don't know / Other
     validations:
