chore: bump vite-plugin-angular to 0.2.0-alpha.7 and create-analog to 0.1.7

--- a/packages/create-analog/package.json
+++ b/packages/create-analog/package.json
@@ -1,12 +1,10 @@
 {
   "name": "create-analog",
-  "version": "0.1.6",
+  "version": "0.1.7",
   "type": "module",
   "license": "MIT",
   "author": "Brandon Roberts",
-  "scripts": {
-    
-  },
+  "scripts": {},
   "bin": {
     "create-analog": "index.js"
   },
