--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
   "bugs": {
     "url": "https://github.com/analogjs/analog/issues"
   },
-  "homepage": "https://github.com/analogjs/analog#readme",
+  "homepage": "https://analogjs.org",
   "repository": {
     "type": "git",
     "url": "https://github.com/analogjs/analog.git"
