feat(astro-angular): add props (inputs) processing
- client: using `ComponentRef#setInput`
- server: using `InjectionToken` with `providers` to pass static props to rendered Component via DI
- add `astro-app` to test Astro integration

ISSUE: #60

--- a/angular.json
+++ b/angular.json
@@ -8,6 +8,7 @@
     "astro-angular": "packages/astro-angular",
     "create-analog": "packages/create-analog",
     "docs-app": "apps/docs-app",
-    "vite-plugin-angular": "packages/vite-plugin-angular"
+    "vite-plugin-angular": "packages/vite-plugin-angular",
+    "astro-app": "apps/astro-app"
   }
 }
