--- a/packages/astro-angular/project.json
+++ b/packages/astro-angular/project.json
@@ -22,7 +22,7 @@
       "dependsOn": [
         {
           "projects": "self",
-          "target": "build"
+          "target": "build-local"
         }
       ]
     },
