fix(create-analog): add tsconfig references so IDE can recognise projects

--- a/packages/create-analog/template-angular-v14/tsconfig.json
+++ b/packages/create-analog/template-angular-v14/tsconfig.json
@@ -18,15 +18,16 @@
     "importHelpers": true,
     "target": "es2020",
     "module": "es2020",
-    "lib": [
-      "es2020",
-      "dom"
-    ]
+    "lib": ["es2020", "dom"]
   },
   "angularCompilerOptions": {
     "enableI18nLegacyMessageIdFormat": false,
     "strictInjectionParameters": true,
     "strictInputAccessModifiers": true,
     "strictTemplates": true
-  }
+  },
+  "references": [
+    { "path": "tsconfig.app.json" },
+    { "path": "tsconfig.spec.json" }
+  ]
 }
