--- a/packages/create-analog/template-angular-v14/tsconfig.spec.json
+++ b/packages/create-analog/template-angular-v14/tsconfig.spec.json
@@ -2,9 +2,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
+    "composite": true,
     "outDir": "./out-tsc/spec",
     "types": ["node", "vitest/globals"]
   },
   "files": ["src/test.ts", "src/polyfills.ts"],
-  "include": ["src/**/*.spec.ts", "src/**/*.d.ts"]
+  "include": ["src/**/*.spec.ts", "src/**/*.ts"]
 }
