--- a/packages/astro-angular/project.json
+++ b/packages/astro-angular/project.json
@@ -34,11 +34,11 @@
       }
     },
     "test": {
-      "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/packages/astro-angular"],
+      "executor": "nx:run-commands",
+      "outputs": ["{options.outputPath}"],
       "options": {
-        "jestConfig": "packages/astro-angular/jest.config.json",
-        "passWithNoTests": true
+        "command": "vitest",
+        "cwd": "packages/astro-angular"
       }
     }
   },
