fix(create-analog): set composite to false and include ts files in tsconfig

--- a/packages/create-analog/template-angular-v14/tsconfig.spec.json
+++ b/packages/create-analog/template-angular-v14/tsconfig.spec.json
@@ -2,7 +2,7 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "composite": true,
+    "composite": false,
     "outDir": "./out-tsc/spec",
     "types": ["node", "vitest/globals"]
   },
