--- a/packages/create-analog/template-angular-v14/tsconfig.app.json
+++ b/packages/create-analog/template-angular-v14/tsconfig.app.json
@@ -2,10 +2,10 @@
 {
   "extends": "./tsconfig.json",
   "compilerOptions": {
-    "composite": true,
+    "composite": false,
     "outDir": "./out-tsc/app",
     "types": []
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
-  "include": ["src/**/*.d.ts"]
+  "include": ["src/**/*.d.ts", "src/**/*.ts"]
 }
