--- a/packages/create-analog/template-angular-v14/tsconfig.app.json
+++ b/packages/create-analog/template-angular-v14/tsconfig.app.json
@@ -7,5 +7,5 @@
     "types": []
   },
   "files": ["src/main.ts", "src/polyfills.ts"],
-  "include": ["src/**/*.d.ts", "src/**/*.ts"]
+  "include": ["src/**/*.d.ts"]
 }
