--- a/packages/astro-angular/tsconfig.lib.json
+++ b/packages/astro-angular/tsconfig.lib.json
@@ -6,5 +6,10 @@
     "types": []
   },
   "include": ["**/*.ts"],
-  "exclude": ["jest.config.ts", "**/*.spec.ts", "**/*.test.ts"]
+  "exclude": [
+    "jest.config.ts",
+    "**/*.spec.ts",
+    "**/*.test.ts",
+    "vite.config.ts"
+  ]
 }
