fix(create-analog): fix initial commit and gitignore file in template app

--- a/packages/create-analog/project.json
+++ b/packages/create-analog/project.json
@@ -8,7 +8,7 @@
       "outputs": ["{options.outputPath}"],
       "options": {
         "outputPath": "dist/packages/create-analog",
-        "command": "cpy packages/create-analog/* dist/"
+        "command": "cpy packages/create-analog/* !packages/create-analog/node_modules/ !packages/create-analog/project.json !packages/create-analog/__tests__/ !packages/create-analog/yarn.lock dist/"
       }
     },
     "test": {
