chore(create-analog): remove optimize from template app

--- a/packages/create-analog/template-angular-v14/package.json
+++ b/packages/create-analog/template-angular-v14/package.json
@@ -11,8 +11,7 @@
     "start": "npm run dev",
     "build": "vite build",
     "watch": "vite build --watch",
-    "test": "vitest",
-    "postinstall": "vite optimize"
+    "test": "vitest"
   },
   "dependencies": {
     "@angular/animations": "^14.0.0",
