fix(astro-angular): inline sourcemaps into compiled output
Closes #96

--- a/packages/astro-angular/tsconfig.lib.json
+++ b/packages/astro-angular/tsconfig.lib.json
@@ -3,6 +3,8 @@
   "compilerOptions": {
     "outDir": "../../dist/out-tsc",
     "declaration": true,
+    "inlineSourceMap": true,
+    "sourceMap": false,
     "types": []
   },
   "include": ["**/*.ts"],
