--- a/package.json
+++ b/package.json
@@ -87,6 +87,11 @@
     "nx": "14.8.4",
     "playwright": "^1.27.1",
     "prettier": "^2.7.1",
+    "ng-packagr": "~14.1.0",
+    "postcss": "^8.4.5",
+    "postcss-import": "~14.1.0",
+    "postcss-preset-env": "~7.5.0",
+    "postcss-url": "~10.1.3",
     "prompts": "^2.4.2",
     "rollup-plugin-visualizer": "^5.8.2",
     "start-server-and-test": "^1.14.0",
