--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -16,6 +16,7 @@
     "baseUrl": ".",
     "paths": {
       "@analogjs/astro-angular": ["packages/astro-angular/src/index.ts"],
+      "@analogjs/router": ["packages/router/src/index.ts"],
       "@analogjs/vite-plugin-angular": [
         "packages/vite-plugin-angular/src/index.ts"
       ]
