--- a/packages/router/package.json
+++ b/packages/router/package.json
@@ -1,11 +1,11 @@
 {
   "name": "@analogjs/router",
-  "version": "0.0.1",
+  "version": "0.1.0-alpha.0",
   "peerDependencies": {
-    "@angular/common": "^14.0.0",
-    "@angular/core": "^14.0.0"
+    "@angular/core": "^14.0.0",
+    "@angular/router": "^14.0.0"
   },
   "dependencies": {
-    "tslib": "^2.3.0"
+    "tslib": "^2.0.0"
   }
 }
