--- a/package.json
+++ b/package.json
@@ -33,67 +33,68 @@
     "apps/docs-app"
   ],
   "dependencies": {
-    "@angular/animations": "14.2.0",
-    "@angular/common": "14.2.0",
-    "@angular/compiler": "14.2.0",
-    "@angular/core": "14.2.0",
-    "@angular/forms": "14.2.0",
-    "@angular/platform-browser": "14.2.0",
-    "@angular/platform-browser-dynamic": "14.2.0",
-    "@angular/platform-server": "14.2.0",
-    "@angular/router": "14.2.0",
-    "@nrwl/angular": "14.5.10",
-    "astro": "^1.1.0",
-    "rxjs": "7.5.6",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.11.4"
+    "@angular/animations": "14.2.5",
+    "@angular/common": "14.2.5",
+    "@angular/compiler": "14.2.5",
+    "@angular/core": "14.2.5",
+    "@angular/forms": "14.2.5",
+    "@angular/platform-browser": "14.2.5",
+    "@angular/platform-browser-dynamic": "14.2.5",
+    "@angular/platform-server": "14.2.5",
+    "@angular/router": "14.2.5",
+    "@nrwl/angular": "14.6.4",
+    "astro": "^1.4.7",
+    "rxjs": "7.5.7",
+    "tslib": "^2.4.0",
+    "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.2.1",
-    "@angular-eslint/eslint-plugin": "~14.0.0",
-    "@angular-eslint/eslint-plugin-template": "~14.0.0",
-    "@angular-eslint/template-parser": "~14.0.0",
-    "@angular/cli": "~14.2.1",
-    "@angular/compiler-cli": "14.2.0",
-    "@angular/language-service": "14.2.0",
-    "@commitlint/cli": "^17.0.3",
-    "@commitlint/config-conventional": "^17.0.3",
+    "@angular-devkit/build-angular": "14.2.5",
+    "@angular-eslint/eslint-plugin": "~14.1.2",
+    "@angular-eslint/eslint-plugin-template": "~14.1.2",
+    "@angular-eslint/template-parser": "~14.1.2",
+    "@angular/cli": "~14.2.5",
+    "@angular/compiler-cli": "14.2.5",
+    "@angular/language-service": "14.2.5",
     "@astrojs/markdown-component": "^1.0.1",
-    "@ngtools/webpack": "~14.0.0",
-    "@nrwl/cli": "14.5.10",
-    "@nrwl/cypress": "14.5.10",
-    "@nrwl/eslint-plugin-nx": "14.5.10",
-    "@nrwl/jest": "14.5.10",
-    "@nrwl/linter": "14.5.10",
-    "@nrwl/workspace": "14.5.10",
+    "@commitlint/cli": "^17.1.2",
+    "@commitlint/config-conventional": "^17.1.0",
+    "@ngtools/webpack": "~14.2.5",
+    "@nrwl/cli": "14.8.4",
+    "@nrwl/cypress": "14.8.4",
+    "@nrwl/eslint-plugin-nx": "14.8.4",
+    "@nrwl/jest": "14.8.4",
+    "@nrwl/linter": "14.8.4",
+    "@nrwl/workspace": "14.8.4",
     "@nx-plus/docusaurus": "14.1.0",
-    "@types/jest": "27.4.1",
-    "playwright": "^1.25.0",
-    "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "all-contributors-cli": "^6.20.0",
-    "conventional-changelog": "^1.1.4",
-    "conventional-changelog-cli": "^1.3.21",
-    "cpy-cli": "^4.1.0",
-    "cypress": "^9.1.0",
-    "eslint": "~8.15.0",
-    "eslint-config-prettier": "8.1.0",
-    "eslint-plugin-cypress": "^2.10.3",
-    "jest": "27.5.1",
-    "kolorist": "^1.5.1",
+    "@types/jest": "29.1.2",
+    "@types/node": "18.8.4",
+    "@typescript-eslint/eslint-plugin": "^5.40.0",
+    "@typescript-eslint/parser": "^5.40.0",
+    "all-contributors-cli": "^6.24.0",
+    "conventional-changelog": "^3.1.25",
+    "conventional-changelog-cli": "^2.2.2",
+    "cpy-cli": "^4.2.0",
+    "cypress": "^10.10.0",
+    "eslint": "~8.25.0",
+    "eslint-config-prettier": "8.5.0",
+    "eslint-plugin-cypress": "^2.12.1",
+    "jest": "29.1.2",
+    "jsdom": "^20.0.1",
+    "kolorist": "^1.6.0",
     "lint-staged": "^13.0.3",
-    "minimist": "^1.2.6",
-    "nx": "14.5.10",
-    "prettier": "^2.6.2",
+    "minimist": "^1.2.7",
+    "nx": "14.8.4",
+    "playwright": "^1.27.1",
+    "prettier": "^2.7.1",
     "prompts": "^2.4.2",
-    "rollup-plugin-visualizer": "^5.7.1",
+    "rollup-plugin-visualizer": "^5.8.2",
     "start-server-and-test": "^1.14.0",
-    "ts-jest": "27.1.4",
+    "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
-    "typescript": "~4.7.2",
-    "vite": "^3.0.4",
-    "vitest": "^0.21.0",
-    "webpack-bundle-analyzer": "^4.5.0"
+    "typescript": "~4.8.4",
+    "vite": "^3.1.7",
+    "vitest": "^0.24.1",
+    "webpack-bundle-analyzer": "^4.6.1"
   }
 }
