chore: add unit tests for routes

--- a/packages/router/project.json
+++ b/packages/router/project.json
@@ -27,6 +27,14 @@
           "packages/router/**/*.html"
         ]
       }
+    },
+    "test": {
+      "executor": "nx:run-commands",
+      "outputs": ["{options.outputPath}"],
+      "options": {
+        "command": "vitest",
+        "cwd": "packages/router"
+      }
     }
   },
   "tags": []
