build: update to Nx 15.0.0 and misc dependencies

--- a/apps/docs-app/project.json
+++ b/apps/docs-app/project.json
@@ -24,5 +24,8 @@
       "dependsOn": ["build"]
     }
   },
-  "tags": []
+  "tags": [],
+  "namedInputs": {
+    "projectSpecificFiles": ["{workspaceRoot}/CONTRIBUTING.md"]
+  }
 }
