--- a/package.json
+++ b/package.json
@@ -33,68 +33,73 @@
     "apps/docs-app"
   ],
   "dependencies": {
-    "@angular/animations": "14.2.5",
-    "@angular/common": "14.2.5",
-    "@angular/compiler": "14.2.5",
-    "@angular/core": "14.2.5",
-    "@angular/forms": "14.2.5",
-    "@angular/platform-browser": "14.2.5",
-    "@angular/platform-browser-dynamic": "14.2.5",
-    "@angular/platform-server": "14.2.5",
-    "@angular/router": "14.2.5",
-    "@nrwl/angular": "14.6.4",
-    "astro": "^1.4.7",
+    "@angular/animations": "14.2.7",
+    "@angular/common": "14.2.7",
+    "@angular/compiler": "14.2.7",
+    "@angular/core": "14.2.7",
+    "@angular/forms": "14.2.7",
+    "@angular/platform-browser": "14.2.7",
+    "@angular/platform-browser-dynamic": "14.2.7",
+    "@angular/platform-server": "14.2.7",
+    "@angular/router": "14.2.7",
+    "@nrwl/angular": "15.0.1",
+    "astro": "^1.5.2",
     "rxjs": "7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.2.5",
+    "@angular-devkit/build-angular": "14.2.6",
     "@angular-eslint/eslint-plugin": "~14.1.2",
     "@angular-eslint/eslint-plugin-template": "~14.1.2",
     "@angular-eslint/template-parser": "~14.1.2",
-    "@angular/cli": "~14.2.5",
-    "@angular/compiler-cli": "14.2.5",
-    "@angular/language-service": "14.2.5",
+    "@angular/cli": "~14.2.6",
+    "@angular/compiler-cli": "14.2.7",
+    "@angular/language-service": "14.2.7",
     "@astrojs/markdown-component": "^1.0.1",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@ngtools/webpack": "~14.2.5",
-    "@nrwl/cli": "14.8.4",
-    "@nrwl/cypress": "14.8.4",
-    "@nrwl/eslint-plugin-nx": "14.8.4",
-    "@nrwl/jest": "14.8.4",
-    "@nrwl/linter": "14.8.4",
-    "@nrwl/workspace": "14.8.4",
+    "@ngtools/webpack": "~14.2.6",
+    "@nrwl/cli": "15.0.1",
+    "@nrwl/cypress": "15.0.1",
+    "@nrwl/eslint-plugin-nx": "15.0.1",
+    "@nrwl/jest": "15.0.1",
+    "@nrwl/linter": "15.0.1",
+    "@nrwl/workspace": "15.0.1",
     "@nx-plus/docusaurus": "14.1.0",
-    "@types/jest": "29.1.2",
-    "@types/node": "18.8.4",
-    "@typescript-eslint/eslint-plugin": "^5.40.0",
-    "@typescript-eslint/parser": "^5.40.0",
+    "@types/jest": "29.2.0",
+    "@types/node": "18.11.3",
+    "@typescript-eslint/eslint-plugin": "^5.40.1",
+    "@typescript-eslint/parser": "^5.40.1",
     "all-contributors-cli": "^6.24.0",
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
     "cypress": "^10.10.0",
-    "eslint": "~8.25.0",
+    "eslint": "~8.26.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
-    "jest": "29.1.2",
+    "jest": "29.2.1",
     "jsdom": "^20.0.1",
     "kolorist": "^1.6.0",
     "lint-staged": "^13.0.3",
     "minimist": "^1.2.7",
-    "nx": "14.8.4",
+    "nx": "15.0.1",
     "playwright": "^1.27.1",
     "prettier": "^2.7.1",
     "prompts": "^2.4.2",
-    "rollup-plugin-visualizer": "^5.8.2",
+    "rollup-plugin-visualizer": "^5.8.3",
     "start-server-and-test": "^1.14.0",
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "typescript": "~4.8.4",
-    "vite": "^3.1.7",
-    "vitest": "^0.24.1",
+    "vite": "^3.1.8",
+    "vitest": "^0.24.3",
     "webpack-bundle-analyzer": "^4.6.1"
+  },
+  "overrides": {
+    "@nx-plus/docusaurus": {
+      "@nrwl/workspace": "$@nrwl/workspace"
+    }
   }
 }
