docs(router): add initial documentation for router package

--- a/.github/ISSUE_TEMPLATE/02-feature-request.yml
+++ b/.github/ISSUE_TEMPLATE/02-feature-request.yml
@@ -17,6 +17,7 @@ body:
         - create-analog
         - vite-plugin-angular
         - astro-angular
+        - router
         - Docs
         - Don't known / other
     validations:
