--- a/.github/ISSUE_TEMPLATE/01-bug-report.yml
+++ b/.github/ISSUE_TEMPLATE/01-bug-report.yml
@@ -26,6 +26,7 @@ body:
         - create-analog
         - vite-plugin-angular
         - astro-angular
+        - router
         - Docs
         - Don't know / Other
     validations:
