--- a/packages/router/project.json
+++ b/packages/router/project.json
@@ -7,7 +7,8 @@
       "executor": "@nrwl/angular:package",
       "outputs": ["node_modules/@analogjs/router"],
       "options": {
-        "project": "packages/router/ng-package.json"
+        "project": "packages/router/ng-package.json",
+        "updateBuildableProjectDepsInPackageJson": false
       },
       "configurations": {
         "production": {
