--- a/packages/router/project.json
+++ b/packages/router/project.json
@@ -5,7 +5,7 @@
   "targets": {
     "build": {
       "executor": "@nrwl/angular:package",
-      "outputs": ["node_modules/@analogjs/router"],
+      "outputs": ["{workspaceRoot}/node_modules/@analogjs/router"],
       "options": {
         "project": "packages/router/ng-package.json",
         "updateBuildableProjectDepsInPackageJson": false
