feat: update nitropack to 0.6.x

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "prepare": "git config core.hookspath .githooks",
     "start": "nx serve",
     "build": "nx run-many --target build --all --exclude=astro-app",
-    "e2e": "nx run-many --target e2e --all --parallel=1",
+    "e2e": "nx run-many --target e2e --all --parallel=1 --exclude=analog-app-e2e-playwright,astro-app-e2e-playwright",
     "test": "nx run-many --target test --all",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "contributors:add": "all-contributors add",
@@ -84,7 +84,7 @@
     "kolorist": "^1.6.0",
     "lint-staged": "^13.0.3",
     "minimist": "^1.2.7",
-    "nitropack": "^0.5.4",
+    "nitropack": "^0.6.1",
     "nx": "14.8.4",
     "playwright": "^1.27.1",
     "prettier": "^2.7.1",
