feat: update template application to use platform/router

--- a/packages/platform/project.json
+++ b/packages/platform/project.json
@@ -10,7 +10,8 @@
         "outputPath": "node_modules/@analogjs/platform",
         "main": "packages/platform/src/index.ts",
         "tsConfig": "packages/platform/tsconfig.lib.json",
-        "assets": ["packages/platform/*.md"]
+        "assets": ["packages/platform/*.md"],
+        "updateBuildableProjectDepsInPackageJson": false
       },
       "configurations": {
         "production": {
