--- a/packages/platform/package.json
+++ b/packages/platform/package.json
@@ -1,8 +1,32 @@
 {
   "name": "@analogjs/platform",
-  "version": "0.1.0-alpha.0",
+  "version": "0.1.0-beta.0",
   "type": "commonjs",
+  "description": "The fullstack meta-framework for Angular",
+  "author": "Brandon Roberts <robertsbt@gmail.com>",
+  "exports": {
+    ".": "./src/index.js",
+    "./package.json": "./package.json"
+  },
+  "keywords": [
+    "angular",
+    "vite",
+    "plugin-vite",
+    "meta-framework"
+  ],
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/analogjs/analog/issues"
+  },
+  "homepage": "https://analogjs.org",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/analogjs/analog.git"
+  },
+  "dependencies": {
+    "nitropack": "^0.6.1"
+  },
   "peerDependencies": {
-    "nitropack": "^0.5.4"
+    "@analogjs/vite-plugin-angular": "latest"
   }
 }
