build: update to Nx 15.2.0 and misc dependencies

--- a/apps/analog-app-e2e-playwright/project.json
+++ b/apps/analog-app-e2e-playwright/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "analog-app-e2e-playwright",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/analog-app-e2e-playwright/src",
   "projectType": "application",
