--- a/packages/vite-plugin-angular/project.json
+++ b/packages/vite-plugin-angular/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "vite-plugin-angular",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/vite-plugin-angular/src",
   "projectType": "library",
