--- a/apps/astro-app-e2e-playwright/project.json
+++ b/apps/astro-app-e2e-playwright/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "astro-app-e2e-playwright",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/astro-app-e2e-playwright/src",
   "projectType": "application",
