--- a/packages/create-analog/project.json
+++ b/packages/create-analog/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "create-analog",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/vite-plugin-angular/src",
   "projectType": "library",
