--- a/packages/platform/project.json
+++ b/packages/platform/project.json
@@ -1,4 +1,5 @@
 {
+  "name": "platform",
   "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "packages/platform/src",
   "projectType": "library",
@@ -32,7 +33,7 @@
     },
     "test": {
       "executor": "nx:run-commands",
-      "outputs": ["coverage/packages/platform"],
+      "outputs": ["{workspaceRoot}/coverage/packages/platform"],
       "options": {
         "command": "vitest",
         "cwd": "packages/platform"
