--- a/packages/router/tsconfig.lib.json
+++ b/packages/router/tsconfig.lib.json
@@ -5,7 +5,9 @@
     "declaration": true,
     "declarationMap": true,
     "inlineSources": true,
-    "types": []
+    "types": [],
+    "target": "ES2022",
+    "useDefineForClassFields": false
   },
   "exclude": ["vite.config.ts", "**/*.test.ts", "**/*.spec.ts"],
   "include": ["**/*.ts"]
