--- a/package.json
+++ b/package.json
@@ -65,8 +65,10 @@
     "@nrwl/eslint-plugin-nx": "15.2.1",
     "@nrwl/jest": "15.2.1",
     "@nrwl/linter": "15.2.1",
+    "@nrwl/vite": "15.2.1",
     "@nrwl/workspace": "15.2.1",
     "@nx-plus/docusaurus": "14.1.0",
+    "@swc/helpers": "^0.4.13",
     "@types/jest": "29.1.2",
     "@types/node": "18.8.4",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
