--- a/package.json
+++ b/package.json
@@ -33,39 +33,39 @@
     "apps/docs-app"
   ],
   "dependencies": {
-    "@angular/animations": "14.2.5",
-    "@angular/common": "14.2.5",
-    "@angular/compiler": "14.2.5",
-    "@angular/core": "14.2.5",
-    "@angular/forms": "14.2.5",
-    "@angular/platform-browser": "14.2.5",
-    "@angular/platform-browser-dynamic": "14.2.5",
-    "@angular/platform-server": "14.2.5",
-    "@angular/router": "14.2.5",
-    "@nrwl/angular": "14.6.4",
+    "@angular/animations": "15.0.0",
+    "@angular/common": "15.0.0",
+    "@angular/compiler": "15.0.0",
+    "@angular/core": "15.0.0",
+    "@angular/forms": "15.0.0",
+    "@angular/platform-browser": "15.0.0",
+    "@angular/platform-browser-dynamic": "15.0.0",
+    "@angular/platform-server": "15.0.0",
+    "@angular/router": "15.0.0",
+    "@nrwl/angular": "15.2.1",
     "astro": "^1.4.7",
     "rxjs": "7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "14.2.5",
-    "@angular-eslint/eslint-plugin": "~14.1.2",
-    "@angular-eslint/eslint-plugin-template": "~14.1.2",
-    "@angular-eslint/template-parser": "~14.1.2",
-    "@angular/cli": "~14.2.5",
-    "@angular/compiler-cli": "14.2.5",
-    "@angular/language-service": "14.2.5",
+    "@angular-devkit/build-angular": "15.0.0",
+    "@angular-eslint/eslint-plugin": "14.0.4",
+    "@angular-eslint/eslint-plugin-template": "14.0.4",
+    "@angular-eslint/template-parser": "14.0.4",
+    "@angular/cli": "~15.0.0",
+    "@angular/compiler-cli": "15.0.0",
+    "@angular/language-service": "15.0.0",
     "@astrojs/markdown-component": "^1.0.1",
     "@commitlint/cli": "^17.1.2",
     "@commitlint/config-conventional": "^17.1.0",
-    "@ngtools/webpack": "~14.2.5",
-    "@nrwl/cli": "14.8.4",
-    "@nrwl/cypress": "14.8.4",
-    "@nrwl/eslint-plugin-nx": "14.8.4",
-    "@nrwl/jest": "14.8.4",
-    "@nrwl/linter": "14.8.4",
-    "@nrwl/workspace": "14.8.4",
+    "@ngtools/webpack": "~15.0.0",
+    "@nrwl/cli": "15.2.1",
+    "@nrwl/cypress": "15.2.1",
+    "@nrwl/eslint-plugin-nx": "15.2.1",
+    "@nrwl/jest": "15.2.1",
+    "@nrwl/linter": "15.2.1",
+    "@nrwl/workspace": "15.2.1",
     "@nx-plus/docusaurus": "14.1.0",
     "@types/jest": "29.1.2",
     "@types/node": "18.8.4",
@@ -75,7 +75,7 @@
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
-    "cypress": "^10.10.0",
+    "cypress": "^11.0.0",
     "eslint": "~8.25.0",
     "eslint-config-prettier": "8.5.0",
     "eslint-plugin-cypress": "^2.12.1",
@@ -84,21 +84,21 @@
     "kolorist": "^1.6.0",
     "lint-staged": "^13.0.3",
     "minimist": "^1.2.7",
+    "ng-packagr": "15.0.0",
     "nitropack": "^0.6.1",
-    "nx": "14.8.4",
+    "nx": "15.2.1",
     "playwright": "^1.27.1",
-    "prettier": "^2.7.1",
-    "ng-packagr": "~14.1.0",
     "postcss": "^8.4.5",
     "postcss-import": "~14.1.0",
     "postcss-preset-env": "~7.5.0",
     "postcss-url": "~10.1.3",
+    "prettier": "^2.7.1",
     "prompts": "^2.4.2",
     "rollup-plugin-visualizer": "^5.8.2",
     "start-server-and-test": "^1.14.0",
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
-    "typescript": "~4.8.4",
+    "typescript": "4.8.4",
     "vite": "^3.1.7",
     "vitest": "^0.24.1",
     "webpack-bundle-analyzer": "^4.6.1"
