--- a/packages/create-analog/template-angular-v15/tsconfig.json
+++ b/packages/create-analog/template-angular-v15/tsconfig.json
@@ -17,8 +17,8 @@
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "ES2022",
-    "module": "es2020",
-    "lib": ["es2020", "dom"],
+    "module": "ES2022",
+    "lib": ["ES2022", "dom"],
     "useDefineForClassFields": false
   },
   "angularCompilerOptions": {
