feat: use @nrwl/vite for tests

--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -95,11 +95,10 @@
       }
     },
     "test": {
-      "executor": "nx:run-commands",
+      "executor": "@nrwl/vite:test",
       "outputs": ["{options.outputPath}"],
       "options": {
-        "command": "vitest",
-        "cwd": "apps/analog-app"
+        "configFile": "apps/analog-app/vite.config.ts"
       }
     }
   },
