--- a/packages/vite-plugin-angular/package.json
+++ b/packages/vite-plugin-angular/package.json
@@ -19,6 +19,6 @@
     "url": "https://github.com/analogjs/analog.git"
   },
   "peerDependencies": {
-    "@angular-devkit/build-angular": "^14.0.0"
+    "@angular-devkit/build-angular": "^14.0.0 || ^15.0.0"
   }
 }
