--- a/apps/analog-app-e2e-cypress/project.json
+++ b/apps/analog-app-e2e-cypress/project.json
@@ -4,28 +4,16 @@
   "sourceRoot": "apps/analog-app-e2e-cypress/src",
   "projectType": "application",
   "targets": {
-    "cypress": {
+    "e2e": {
       "executor": "@nrwl/cypress:cypress",
       "options": {
         "cypressConfig": "apps/analog-app-e2e-cypress/cypress.config.ts",
-        "baseUrl": "http://localhost:3000",
+        "devServerTarget": "analog-app:serve",
         "testingType": "e2e"
       },
       "configurations": {
         "watch": {
           "watch": true
-        }
-      }
-    },
-    "e2e": {
-      "executor": "nx:run-commands",
-      "options": {
-        "cwd": "",
-        "command": "start-server-and-test 'nx serve analog-app' 3000 'nx cypress analog-app-e2e-cypress'"
-      },
-      "configurations": {
-        "watch": {
-          "command": "start-server-and-test 'nx serve analog-app' 3000 'nx cypress analog-app-e2e-cypress --configuration=watch'"
         }
       }
     },
