--- a/apps/astro-app/project.json
+++ b/apps/astro-app/project.json
@@ -2,6 +2,25 @@
   "name": "astro-app",
   "projectType": "application",
   "sourceRoot": "apps/astro-app/src",
-  "targets": {},
+  "targets": {
+    "serve": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "astro dev --root apps/astro-app"
+      }
+    },
+    "build": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "astro build --root apps/astro-app"
+      }
+    },
+    "preview": {
+      "executor": "nx:run-commands",
+      "options": {
+        "command": "astro preview --root apps/astro-app"
+      }
+    }
+  },
   "tags": []
 }
