--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "all-contributors-cli": "^6.24.0",
+    "astro": "1.6.11",
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
