chore: update analog-app e2e for playwright

--- a/apps/analog-app-e2e-playwright/project.json
+++ b/apps/analog-app-e2e-playwright/project.json
@@ -5,11 +5,7 @@
   "projectType": "application",
   "targets": {
     "vitest": {
-      "executor": "nx:run-commands",
-      "options": {
-        "cwd": "apps/analog-app-e2e-playwright",
-        "commands": ["vitest"]
-      }
+      "executor": "@nrwl/vite:test"
     },
     "e2e": {
       "executor": "nx:run-commands",
