--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "prepare": "git config core.hookspath .githooks",
     "start": "nx serve",
-    "build": "nx run-many --target build --all --exclude=astro-app",
-    "e2e": "nx run-many --target e2e --all --parallel=1 --exclude=analog-app-e2e-playwright,astro-app-e2e-playwright",
+    "build": "nx run-many --target build --all",
+    "e2e": "nx run-many --target e2e --all --parallel=1",
     "test": "nx run-many --target test --all",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "contributors:add": "all-contributors add",
