chore: update packages to use Vite package

--- a/apps/docs-app/project.json
+++ b/apps/docs-app/project.json
@@ -18,7 +18,7 @@
       "dependsOn": []
     },
     "serve-static": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "command": "docusaurus serve --config apps/docs-app/docusaurus.config.js --dir dist/apps/docs-app"
       },
