--- a/packages/astro-angular/project.json
+++ b/packages/astro-angular/project.json
@@ -16,7 +16,7 @@
       }
     },
     "publish": {
-      "executor": "@nrwl/workspace:run-commands",
+      "executor": "nx:run-commands",
       "options": {
         "command": "node tools/scripts/publish.mjs astro-angular {args.ver} {args.tag}"
       },
@@ -35,12 +35,7 @@
       }
     },
     "test": {
-      "executor": "nx:run-commands",
-      "outputs": ["{options.outputPath}"],
-      "options": {
-        "command": "vitest",
-        "cwd": "packages/astro-angular"
-      }
+      "executor": "@nrwl/vite:test"
     }
   },
   "tags": []
