--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "postinstall": "node ./decorate-angular-cli.js && ngcc --properties es2020 browser module main",
     "prepare": "git config core.hookspath .githooks",
     "start": "nx serve",
-    "build": "nx run-many --target build --all --exclude=astro-app",
-    "e2e": "nx run-many --target e2e --all --parallel=1 --exclude=analog-app-e2e-playwright,astro-app-e2e-playwright",
+    "build": "nx run-many --target build --all",
+    "e2e": "nx run-many --target e2e --all --parallel=1",
     "test": "nx run-many --target test --all",
     "changelog": "conventional-changelog -p angular -i CHANGELOG.md -s -r 0",
     "contributors:add": "all-contributors add",
@@ -43,7 +43,6 @@
     "@angular/platform-server": "15.0.0",
     "@angular/router": "15.0.0",
     "@nrwl/angular": "15.2.1",
-    "astro": "^1.4.7",
     "rxjs": "7.5.7",
     "tslib": "^2.4.0",
     "zone.js": "~0.11.8"
@@ -65,13 +64,16 @@
     "@nrwl/eslint-plugin-nx": "15.2.1",
     "@nrwl/jest": "15.2.1",
     "@nrwl/linter": "15.2.1",
+    "@nrwl/vite": "15.2.1",
     "@nrwl/workspace": "15.2.1",
     "@nx-plus/docusaurus": "14.1.0",
+    "@swc/helpers": "^0.4.13",
     "@types/jest": "29.1.2",
     "@types/node": "18.8.4",
     "@typescript-eslint/eslint-plugin": "^5.40.0",
     "@typescript-eslint/parser": "^5.40.0",
     "all-contributors-cli": "^6.24.0",
+    "astro": "1.6.11",
     "conventional-changelog": "^3.1.25",
     "conventional-changelog-cli": "^2.2.2",
     "cpy-cli": "^4.2.0",
