--- a/packages/create-analog/template-angular-v15/angular.json
+++ b/packages/create-analog/template-angular-v15/angular.json
@@ -5,12 +5,48 @@
   "projects": {
     "my-app": {
       "projectType": "application",
-      "schematics": {},
       "root": "",
       "sourceRoot": "src",
       "prefix": "app",
       "architect": {
-        "targets": {}
+        "build": {
+          "builder": "@nrwl/vite:build",
+          "options": {
+            "configFile": "vite.config.ts",
+            "outputPath": "dist/client"
+          },
+          "defaultConfiguration": "production",
+          "configurations": {
+            "development": {},
+            "production": {
+              "sourcemap": false
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/vite:dev-server",
+          "defaultConfiguration": "development",
+          "options": {
+            "buildTarget": "my-app:build",
+            "port": 5173
+          },
+          "configurations": {
+            "development": {
+              "buildTarget": "my-app:build:development",
+              "hmr": true
+            },
+            "production": {
+              "buildTarget": "my-app:build:production",
+              "hmr": false
+            }
+          }
+        },
+        "test": {
+          "builder": "@nrwl/vite:test",
+          "options": {
+            "config": "vite.config.ts"
+          }
+        }
       }
     }
   }
