--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@nrwl/linter": "15.2.1",
     "@nrwl/vite": "15.2.1",
     "@nrwl/workspace": "15.2.1",
-    "@nx-plus/docusaurus": "14.1.0",
+    "@nx-plus/docusaurus": "15.0.0-rc.0",
     "@swc/helpers": "^0.4.13",
     "@types/jest": "29.1.2",
     "@types/node": "18.8.4",
