chore: remove hmr from prod build

--- a/apps/analog-app/project.json
+++ b/apps/analog-app/project.json
@@ -80,8 +80,7 @@
           "hmr": true
         },
         "production": {
-          "buildTarget": "analog-app:build:production",
-          "hmr": false
+          "buildTarget": "analog-app:build:production"
         }
       }
     },
