--- a/packages/create-analog/template-angular-v15/angular.json
+++ b/packages/create-analog/template-angular-v15/angular.json
@@ -36,8 +36,7 @@
               "hmr": true
             },
             "production": {
-              "buildTarget": "my-app:build:production",
-              "hmr": false
+              "buildTarget": "my-app:build:production"
             }
           }
         },
