--- a/package.json
+++ b/package.json
@@ -66,7 +66,7 @@
     "@nrwl/linter": "15.2.1",
     "@nrwl/vite": "15.2.1",
     "@nrwl/workspace": "15.2.1",
-    "@nx-plus/docusaurus": "14.1.0",
+    "@nx-plus/docusaurus": "15.0.0-rc.0",
     "@swc/helpers": "^0.4.13",
     "@types/jest": "29.1.2",
     "@types/node": "18.8.4",
@@ -101,8 +101,8 @@
     "ts-jest": "29.0.3",
     "ts-node": "10.9.1",
     "typescript": "4.8.4",
-    "vite": "^3.1.7",
-    "vitest": "^0.24.1",
+    "vite": "^3.2.3",
+    "vitest": "^0.25.1",
     "webpack-bundle-analyzer": "^4.6.1"
   }
 }
